[tool.poetry]
name = "fastapi_tortoiseorm_seed_project"
version = "0.1.0"
description = ""
authors = ["Ebin Joseph"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
tortoise-orm = "^0.18.1"
asyncpg = "^0.25.0"
uvicorn = "^0.17.5"
uvloop = "^0.16.0"
python-rapidjson = "^1.5"
ciso8601 = "^2.2.0"
aerich = "^0.6.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
pytest = "^7.0.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
